--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-precise-xenial-jiggery" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf a5dfadf8832d ; popd
+- git clone --branch="bv-test-ibmjava" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 75a3108db56f ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-precise-xenial-jiggery"
+- export PACKER_TEMPLATES_BRANCH="bv-test-ibmjava"
 - "./packer-templates/bin/packer-build-script internal-bastion"
 addons:
   artifacts:
