--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,10 @@ before_install:
   -o Dpkg::Options::="--force-confnew" -yqq docker-ce lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
+- export TRAVIS_COOKBOOKS_BRANCH=ibmjava-travisci
 install:
 - git clone --branch="bv-test-ibmjava" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 75a3108db56f ; popd
+- pushd packer-templates && git checkout -qf 8efe0c2fa18a ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - export PACKER_TEMPLATES_BRANCH="bv-test-ibmjava"
