--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,16 @@
 ---
-language: minimal
+language: generic
 dist: trusty
 group: edge
 sudo: true
-before_install:
-- if [[ "${BUILDER}" = "docker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
-  purge -o Dpkg::Options::="--force-confnew" -yqq docker-ce ; sudo apt-get install
-  -o Dpkg::Options::="--force-confnew" -yqq docker-ce lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
-  --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
-  docker restart ; fi
-- export TRAVIS_COOKBOOKS_BRANCH=emma-opal-fixes
-install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf @ ; popd
-- "./packer-templates/bin/packer-build-install"
-script:
-- export PACKER_TEMPLATES_BRANCH="master"
-- "./packer-templates/bin/packer-build-script ci-opal"
-addons:
-  artifacts:
-    paths:
-    - image-metadata-$(cat .packer-build-image-name).tar.bz2
-    target_paths:
-    - travis-ci/packer-templates/ci-opal/$BUILDER
 env:
   matrix:
   - BUILDER=googlecompute
   - BUILDER=docker
+install:
+- echo ohai
+script:
+- if [[ /home/me/code/packer-templates/.git::ci-opal.yml =~ yml ]] ; then packer build
+  -only=${BUILDER} <( ruby -rjson -ryaml -rerb -e " puts JSON.pretty_generate( YAML.load(ERB.new(STDIN.read).result)
+  ) " < /home/me/code/packer-templates/.git::ci-opal.yml ) ; else packer build -only=${BUILDER}
+  /home/me/code/packer-templates/.git::ci-opal.yml ; fi
