--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ before_install:
   docker restart ; fi
 - export TRAVIS_COOKBOOKS_BRANCH=ibmjava-travisci
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf @ ; popd
+- git clone --branch="bv-test-ibmjava" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 80328c5eb54f ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="bv-test-ibmjava"
 - "./packer-templates/bin/packer-build-script ci-garnet"
 addons:
   artifacts:
