--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,15 @@
 ---
-language: minimal
+language: generic
 dist: trusty
 group: edge
 sudo: true
-before_install:
-- if [[ "${BUILDER}" = "docker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
-  purge -o Dpkg::Options::="--force-confnew" -yqq docker-ce ; sudo apt-get install
-  -o Dpkg::Options::="--force-confnew" -yqq docker-ce lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
-  --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
-  docker restart ; fi
-- export TRAVIS_COOKBOOKS_BRANCH=ibmjava-travisci
-install:
-- git clone --branch="bv-test-ibmjava" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 80328c5eb54f ; popd
-- "./packer-templates/bin/packer-build-install"
-script:
-- export PACKER_TEMPLATES_BRANCH="bv-test-ibmjava"
-- "./packer-templates/bin/packer-build-script ci-garnet"
-addons:
-  artifacts:
-    paths:
-    - image-metadata-$(cat .packer-build-image-name).tar.bz2
-    target_paths:
-    - travis-ci/packer-templates/ci-garnet/$BUILDER
 env:
   matrix:
   - BUILDER=googlecompute
   - BUILDER=docker
+install:
+- echo ohai
+script:
+- if [[ ci-garnet.yml =~ yml ]] ; then packer build -only=${BUILDER} <( ruby -rjson
+  -ryaml -rerb -e " puts JSON.pretty_generate( YAML.load(ERB.new(STDIN.read).result)
+  ) " < ci-garnet.yml ) ; else packer build -only=${BUILDER} ci-garnet.yml ; fi
