--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf c9c9a3c20c2e ; popd
+- git clone --branch="aj-ebs" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 6c80537f4306 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="aj-ebs"
 - "./packer-templates/bin/packer-build-script ci-amethyst"
 addons:
   artifacts:
