--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/526/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="aj-ebs" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf e97ce677dbd5 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/526/merge"
+- export PACKER_TEMPLATES_BRANCH="aj-ebs"
 - "./packer-templates/bin/packer-build-script tfw-worker-preseed"
 addons:
   artifacts:
