--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf e019fad219e2 ; popd
+- git clone --branch="aj-tfw-16.04" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 26fc1cf267be ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="aj-tfw-16.04"
 - "./packer-templates/bin/packer-build-script ci-connie"
 addons:
   artifacts:
