--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/539/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="aj-tfw-16.04" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 1e71c5865f2b ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/539/merge"
+- export PACKER_TEMPLATES_BRANCH="aj-tfw-16.04"
 - "./packer-templates/bin/packer-build-script internal-bastion"
 addons:
   artifacts:
