--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,12 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="aj-kernel-4.9.60" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 3bd5b535e95f ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/540/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="aj-kernel-4.9.60"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/540/merge"
 - "./packer-templates/bin/packer-build-script tfw"
 addons:
   artifacts:
