--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   docker restart ; fi
 install:
 - git clone --branch="bv-build-image-fixes" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 27d9fa9d575c ; popd
+- pushd packer-templates && git checkout -qf @ ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - export PACKER_TEMPLATES_BRANCH="bv-build-image-fixes"
