--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,12 @@ before_install:
   docker restart ; fi
 - export TRAVIS_COOKBOOKS_BRANCH=emorley-yarn-latest
 install:
-- git clone --branch="edmorley-test-cookbooks-yarn-latest" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 5e88fd855c21 ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/542/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="edmorley-test-cookbooks-yarn-latest"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/542/merge"
 - "./packer-templates/bin/packer-build-script ci-connie"
 addons:
   artifacts:
