--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,19 @@ dist: trusty
 group: edge
 sudo: true
 before_install:
-- export TRAVIS_COOKBOOKS_BRANCH="bv-build-image-fixes"
 - if [[ "${BUILDER}" = "docker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
   purge -o Dpkg::Options::="--force-confnew" -yqq docker-ce ; sudo apt-get install
   -o Dpkg::Options::="--force-confnew" -yqq docker-ce lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
+- export TRAVIS_COOKBOOKS_BRANCH=emorley-yarn-latest
 install:
-- git clone --branch="bv-build-image-fixes" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf @ ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/542/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="bv-build-image-fixes"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/542/merge"
 - "./packer-templates/bin/packer-build-script ci-garnet"
 addons:
   artifacts:
