--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dist: trusty
 group: edge
 sudo: true
 before_install:
-- TRAVIS_COOKBOOKS_BRANCH="bv-build-image-fixes"
+- export TRAVIS_COOKBOOKS_BRANCH="bv-build-image-fixes"
 - if [[ "${BUILDER}" = "docker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
   purge -o Dpkg::Options::="--force-confnew" -yqq docker-ce ; sudo apt-get install
   -o Dpkg::Options::="--force-confnew" -yqq docker-ce lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
