--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,17 @@ dist: trusty
 group: edge
 sudo: true
 before_install:
-- export TRAVIS_COOKBOOKS_BRANCH="bv-build-image-fixes"
 - if [[ "${BUILDER}" = "docker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
   purge -o Dpkg::Options::="--force-confnew" -yqq docker-ce ; sudo apt-get install
   -o Dpkg::Options::="--force-confnew" -yqq docker-ce lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="bv-fix-rabbit-specs" "https://github.com/travis-ci/packer-templates.git"
+- git clone --branch="bv-remove-pinned-chef-version" "https://github.com/travis-ci/packer-templates.git"
 - pushd packer-templates && git checkout -qf @ ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="bv-fix-rabbit-specs"
+- export PACKER_TEMPLATES_BRANCH="bv-remove-pinned-chef-version"
 - "./packer-templates/bin/packer-build-script ci-garnet"
 addons:
   artifacts:
