--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ before_install:
   -o Dpkg::Options::="--force-confnew" -yqq docker-ce lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
-- export TRAVIS_COOKBOOKS_BRANCH=emorley-yarn-latest
+- export TRAVIS_COOKBOOKS_BRANCH=edmorley-bump-versions
 install:
-- git clone --branch="edmorley-test-cookbooks-yarn-latest" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 3200d335c4ea ; popd
+- git clone --branch="edmorley-bump-versions" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf @ ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="edmorley-test-cookbooks-yarn-latest"
+- export PACKER_TEMPLATES_BRANCH="edmorley-bump-versions"
 - "./packer-templates/bin/packer-build-script ci-stevonnie"
 addons:
   artifacts:
