--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/549/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="edmorley-green-gce-opal-sardonyx" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf b083db61a699 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/549/merge"
+- export PACKER_TEMPLATES_BRANCH="edmorley-green-gce-opal-sardonyx"
 - "./packer-templates/bin/packer-build-script ci-opal"
 addons:
   artifacts:
