--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,12 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="edmorley-green-gce-opal-sardonyx" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 18add433158a ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/549/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="edmorley-green-gce-opal-sardonyx"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/549/merge"
 - "./packer-templates/bin/packer-build-script ci-sardonyx"
 addons:
   artifacts:
