--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="aj-tfw-16.04" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf d73999756146 ; popd
+- git clone --branch="edmorley-xenial-testing" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf @ ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="aj-tfw-16.04"
+- export PACKER_TEMPLATES_BRANCH="edmorley-xenial-testing"
 - "./packer-templates/bin/packer-build-script ci-opal"
 addons:
   artifacts:
